# rgb-api

./: .cursorrules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  llms.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml  test.yml
cli/: Cargo.toml  README.md
cli/src/: args.rs  command.rs  main.rs
psbt/: Cargo.toml
psbt/src/: bp.rs  bp_conversion_utils.rs  lib.rs  rb.rs  rgb.rs
src/: bdk_provider.rs  bp_provider.rs  descriptor.rs  errors.rs  filters.rs  lib.rs  pay.rs  wallet.rs
