[workspace]
members = [
    "psbt",
    "cli",
    "."
]
default-members = [
    "psbt",
    "."
]

[workspace.package]
version = "0.11.1-rc.5"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
homepage = "https://rgb.info"
repository = "https://github.com/rgb-protocol/rgb-api"
rust-version = "1.81.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.8.0"
nonasync = { version = "0.1.2", features = ["log"] }
baid64 = "0.4.1"
strict_encoding = "2.8.2"
strict_types = "2.8.3"
commit_verify = "0.11.1-alpha.2"
bp-core = "0.11.1-alpha.2"
bp-std = { version = "0.11.1-alpha.2", features = ["client-side-validation"] }
bp-wallet = { version = "0.11.1-alpha.2" }
rgb-ops = { version = "0.11.1-rc.5" }
rgb-psbt-utils = { version = "0.11.1-rc.5", path = "psbt" }
indexmap = "2.4.0"
chrono = "0.4.38"
serde_crate = { package = "serde", version = "1", features = ["derive"] }
serde_yaml = "0.9.19"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }

[package]
name = "rgb-api"
version.workspace = true
description = "RGB smart contracts wallet runtime"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rgb"
crate-type = ["cdylib", "rlib"]

[dependencies]
amplify = { workspace = true }
nonasync = { workspace = true }
baid64 = { workspace = true }
commit_verify = { workspace = true }
strict_types = { workspace = true }
bp-core = { workspace = true }
bp-std = { workspace = true }
bp-wallet = { workspace = true }
rgb-ops = { workspace = true }
rgb-psbt-utils = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
serde_crate = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
all = ["esplora_blocking", "electrum_blocking", "mempool_blocking", "serde", "log", "fs", "cli"]
fs = ["serde", "bp-wallet/fs", "rgb-ops/fs"]
cli = ["fs", "bp-wallet/cli", "serde_yaml"]
esplora_blocking = ["rgb-ops/esplora_blocking"]
esplora_blocking-wasm = ["rgb-ops/esplora_blocking-wasm"]
electrum_blocking = ["rgb-ops/electrum_blocking"]
mempool_blocking = ["rgb-ops/mempool_blocking"]
serde = ["serde_crate", "bp-std/serde", "rgb-psbt-utils/serde"]

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
rgb-consensus = { git = "https://github.com/rgb-protocol/rgb-consensus.git", branch = "master" }
rgb-ops = { git = "https://github.com/rgb-protocol/rgb-ops.git", branch = "master" }
