[workspace]
members = [
    "psbt",
    "cli",
    "."
]
default-members = [
    "psbt",
    "."
]

[workspace.package]
version = "0.11.1-rc.7"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Zoe Faltibà <zoefaltiba@gmail.com>"]
homepage = "https://rgb.info"
repository = "https://github.com/rgb-protocol/rgb-api"
rust-version = "1.82.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "=4.8.1"
nonasync = { version = "=0.1.3", features = [
    "log",
] }
baid64 = "=0.4.1"
rgb-strict-encoding = "1.0.0"
rgb-strict-types = "1.0.0"
bp-wallet = { version = "0.11.1-alpha.2" }
rgb-ops = { version = "0.11.1-rc.7" }
rgb-psbt-utils = { version = "0.11.1-rc.7", path = "psbt" }
indexmap = "2.4.0"
chrono = "0.4.38"
serde_crate = { package = "serde", version = "1", features = [
    "derive",
] }
serde_yaml = "0.9.19"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }

[package]
name = "rgb-api"
version.workspace = true
description = "RGB smart contracts wallet runtime"
keywords.workspace = true
categories.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rgb"
crate-type = ["cdylib", "rlib"]

[dependencies]
amplify = { workspace = true }
nonasync = { workspace = true }
baid64 = { workspace = true }
rgb-strict-types = { workspace = true }
bdk_wallet = { version = "=2.0.0", default-features = false, optional = true, features = [
    "file_store",
    "keys-bip39",
    "std",
] }
bp-wallet = { workspace = true, optional = true }
rgb-ops = { workspace = true }
rgb-psbt-utils = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
serde_crate = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
log = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = [
    "wasm_js",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
all = [
    "bdk",
    "bp-wallet",
    "cli",
    "electrum_blocking",
    "esplora_blocking",
    "fs",
    "log",
    "mempool_blocking",
    "serde",
]
bp = [
    "bp-wallet",
    "rgb-psbt-utils/bp",
]
bdk = [
    "bdk_wallet",
]
fs = [
    "bp-wallet/fs",
    "rgb-ops/fs",
    "serde",
]
cli = [
    "bp",
    "bp-wallet/cli",
    "fs",
    "serde_yaml",
]
esplora_blocking = [
    "rgb-ops/esplora_blocking",
]
electrum_blocking = [
    "rgb-ops/electrum_blocking",
]
mempool_blocking = [
    "rgb-ops/mempool_blocking",
]
serde = [
    "serde_crate",
    "rgb-psbt-utils/serde",
]

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
rgb-strict-encoding = { git = "http://github.com/rgb-protocol/rgb-strict-encoding", branch = "master" }
rgb-ascii-armor = { git = "http://github.com/rgb-protocol/rgb-ascii-armor", branch = "master" }
rgb-strict-types = { git = "http://github.com/rgb-protocol/rgb-strict-types", branch = "master" }
rgb-aluvm = { git = "http://github.com/rgb-protocol/rgb-aluvm", branch = "master" }
rgb-consensus = { git = "http://github.com/rgb-protocol/rgb-consensus", branch = "master" }
rgb-ops = { git = "http://github.com/rgb-protocol/rgb-ops", branch = "master" }
