[package]
name = "rgb-cmd"
version = { workspace = true }
description = "Command-line wallet for RGB smart contracts on Bitcoin"
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "rgb"
path = "src/main.rs"

[dependencies]
amplify = { workspace = true }
baid64 = { workspace = true }
rgb-strict-types = { workspace = true, features = [
    "serde",
] }
bp-wallet = { workspace = true, features = [
    "cli",
] }
rgb-ops = { workspace = true, features = [
    "serde",
] }
rgb-api = { version = "0.11.1-rc.10", path = "..", features = [
    "cli",
    "electrum_blocking",
    "esplora_blocking",
    "fs",
    "mempool_blocking",
    "serde",
] }
rgb-psbt-utils = { workspace = true, features = [
    "bp",
] }
log = { workspace = true }
clap = { version = "4.6.1", features = [
    "derive",
    "env",
] }
serde_crate = { workspace = true }
serde_yaml = { workspace = true }

[features]
default = []
