[package]
name = "rgb-psbt-utils"
version = { workspace = true }
description = "Partially signed bitcoin transaction RGB extensions"
keywords = ["bitcoin", "invoices", "rgb", "smart-contracts", "psbt"]
categories = ["cryptography::cryptocurrencies"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "psrgbt"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
amplify = { workspace = true }
baid64 = { workspace = true }
bp-std = { version = "0.11.1-alpha.2", optional = true }
rgb-strict-encoding = { workspace = true }
rgb-ops = { workspace = true }
serde_crate = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
all = [
    "serde",
]
bp = [
    "bp-std",
]
serde = [
    "rgb-ops/serde",
]

[package.metadata.docs.rs]
features = ["all"]
